--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1385874687607024"
+     crossorigin="anonymous"></script>
+
   <!-- =======================================================
   * Template Name: Nussa Inc - v1.9.0
   * Template URL: https://bootstrapmade.com/Nussa Inc-bootstrap-startup-template/
